<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/header_app" />
    <LinearLayout
        android:layout_margin="5dp"
        android:background="@drawable/edt_white"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txt_selected"
            android:padding="5dp"
            android:drawableLeft="@android:drawable/ic_menu_myplaces"
            android:hint="India"
            android:textColorHint="@color/black"
            android:gravity="center_vertical"
            android:textSize="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <TextView
            android:padding="5dp"
            android:drawableLeft="@android:drawable/ic_menu_search"
            android:drawableRight="@android:drawable/arrow_down_float"
            android:textSize="18dp"
            android:gravity="center_vertical"
            android:hint="@string/select_state"
            android:textColorHint="@color/black"
            android:id="@+id/txt_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <ScrollView
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:padding="5dp"
            android:background="@drawable/edt_white"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_num_gp"
                android:background="@drawable/bg_hwtbtnbg"
                android:layout_margin="5dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/txt_num_gp"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:background="@drawable/bg_hwt"
                    android:textSize="16dp"
                    android:paddingLeft="15dp"
                    android:paddingBottom="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/num_gp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <Button
                    android:padding="10dp"
                    android:textColorHint="@color/white"
                    android:hint="@string/num_gp"
                    android:textSize="16dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/bg_hwtbtn"
                    android:id="@+id/btn_num_gp"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:minEms="8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:background="@drawable/bg_hwtbtnbg"
                android:layout_margin="5dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/txt_num_hh"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:background="@drawable/bg_hwt"
                    android:textSize="16dp"
                    android:paddingLeft="15dp"
                    android:paddingBottom="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/num_hh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <Button
                    android:padding="10dp"
                    android:textColorHint="@color/white"
                    android:hint="@string/num_hh"
                    android:textSize="16dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/bg_hwtbtn"
                    android:id="@+id/btn_num_hh"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:minEms="8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:background="@drawable/bg_hwtbtnbg"
                android:layout_margin="5dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/txt_num_hh_wt_toilet"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:background="@drawable/bg_hwt"
                    android:textSize="16dp"
                    android:paddingLeft="15dp"
                    android:paddingBottom="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/num_hh_wt_toilet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <Button
                    android:padding="10dp"
                    android:textColorHint="@color/white"
                    android:hint="@string/num_hh_wt_toilet"
                    android:textSize="16dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/bg_hwtbtn"
                    android:id="@+id/btn_num_hh_wt_toilet"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:minEms="8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:background="@drawable/bg_hwtbtnbg"
                android:layout_margin="5dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/txt_num_hh_wo_toilet"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:background="@drawable/bg_hwt"
                    android:textSize="16dp"
                    android:paddingLeft="15dp"
                    android:paddingBottom="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/num_hh_wo_toilet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <Button
                    android:padding="10dp"
                    android:textColorHint="@color/white"
                    android:hint="@string/num_hh_wo_toilet"
                    android:textSize="16dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/bg_hwtbtn"
                    android:id="@+id/btn_num_hh_wo_toilet"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:minEms="8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:background="@drawable/bg_hwtbtnbg"
                android:layout_margin="5dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/txt_coverage_wt_toilet"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:background="@drawable/bg_hwt"
                    android:textSize="16dp"
                    android:paddingLeft="15dp"
                    android:paddingBottom="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/coverage_wt_toilet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <Button
                    android:padding="10dp"
                    android:textColorHint="@color/white"
                    android:hint="@string/coverage_wt_toilet"
                    android:textSize="16dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/bg_hwtbtn"
                    android:id="@+id/btn_coverage_wt_toilet"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:minEms="8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_num_gp_complete_coverage"
                android:background="@drawable/bg_hwtbtnbg"
                android:layout_margin="5dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/txt_num_gp_complete_coverage"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:background="@drawable/bg_hwt"
                    android:textSize="16dp"
                    android:paddingLeft="15dp"
                    android:paddingBottom="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/num_gp_complete_coverage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <Button
                    android:padding="10dp"
                    android:textColorHint="@color/white"
                    android:hint="@string/num_gp_complete_coverage"
                    android:textSize="16dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/bg_hwtbtn"
                    android:id="@+id/btn_num_gp_complete_coverage"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:minEms="8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:background="@drawable/bg_hwtbtnbg"
                android:layout_margin="5dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/txt_num_gp_declared_odf"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:background="@drawable/bg_hwt"
                    android:textSize="16dp"
                    android:paddingLeft="15dp"
                    android:paddingBottom="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/num_gp_declared_odf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <Button
                    android:padding="10dp"
                    android:textColorHint="@color/white"
                    android:hint="@string/num_gp_declared_odf"
                    android:textSize="16dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/bg_hwtbtn"
                    android:id="@+id/btn_num_gp_declared_odf"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:minEms="8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
